--- a/project/templates/feesone.html
+++ b/project/templates/feesone.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 {% if not request.user == user_to_follow %}
-    {% if request.user.following.filter(id=user_to_follow.id).exists %}
+    {% if request.user.following.filter(id=user_to_follow.id).exis %}
         <a href="{% url 'unfollow_user' user_to_follow.id %}">Unfollow</a>
     {% else %}
         <a href="{% url 'follow_user' user_to_follow.id %}">Follow</a>
