--- a/project/templates/feesone.html
+++ b/project/templates/feesone.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-{% if not request.user == user_to_follow %}
-    {% if request.user.following.filter(id=user_to_follow.id).exis %}
-        <a href="{% url 'unfollow_user' user_to_follow.id %}">Unfollow</a>
-    {% else %}
-        <a href="{% url 'follow_user' user_to_follow.id %}">Follow</a>
-    {% endif %}
-{% endif %}
+<h2>Hello! Abu Bakkar Siddik</h2>
 </body>
 </html>
